--- a/app/src/main/res/layout/comparison_overlap.xml
+++ b/app/src/main/res/layout/comparison_overlap.xml
@@ -9,14 +9,14 @@
 
 	<RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent"
 	              android:orientation="vertical">
-		<ImageView android:id="@+id/image1"
+		<com.ortiz.touchview.TouchImageView android:id="@+id/image1"
 		           android:layout_height="wrap_content"
 		           android:layout_width="match_parent"
-		           android:src="@drawable/dsc_2549"></ImageView>
-		<ImageView android:id="@+id/image2"
+		           android:src="@drawable/dsc_2549"></com.ortiz.touchview.TouchImageView>
+		<com.ortiz.touchview.TouchImageView android:id="@+id/image2"
 		           android:layout_height="wrap_content"
 		           android:layout_width="wrap_content"
-		           android:src="@drawable/dsc_2550"></ImageView>
+		           android:src="@drawable/dsc_2550"></com.ortiz.touchview.TouchImageView>
 	</RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
