--- a/app/src/main/res/layout/activity_comparison_side_by_side.xml
+++ b/app/src/main/res/layout/activity_comparison_side_by_side.xml
@@ -5,16 +5,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ComparisonSideBySide">
+        tools:context=".ComparisonSideBySide"
+        android:background="@color/backgroundDark">
 
     <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent"
                   android:orientation="vertical">
-        <android.support.v7.widget.Toolbar
-                android:layout_height="wrap_content"
-                android:background="?attr/colorPrimary"
-                android:theme="?attr/actionBarTheme"
-                android:minHeight="?attr/actionBarSize" tools:layout_editor_absoluteY="0dp"
-                tools:layout_editor_absoluteX="0dp" android:id="@+id/toolbar" android:layout_width="match_parent"/>
         <ImageView android:id="@+id/image1"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
