--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
 		android:layout_height="match_parent"
 		tools:context=".MainActivity">
 
-	<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent"
+	<LinearLayout android:layout_height="match_parent"
+	              android:layout_width="match_parent"
 	              android:orientation="vertical">
 		<android.support.design.widget.AppBarLayout
 				android:layout_height="wrap_content"
@@ -25,9 +26,17 @@
 
 		<ListView
 				android:id="@+id/photosList"
-				android:backgroundTint="@color/backgroundLight"
+				android:divider="@color/colorPrimary"
+				android:footerDividersEnabled="false"
+				android:headerDividersEnabled="false"
+				android:dividerHeight="1px"
 				android:layout_width="match_parent"
-				android:layout_height="match_parent">
+				android:layout_height="match_parent"
+				android:clipToPadding="false"
+				android:paddingBottom="88dp"
+				android:overScrollFooter="@android:color/transparent"
+				android:soundEffectsEnabled="false"
+				android:choiceMode="multipleChoice">
 		</ListView>
 	</LinearLayout>
 
@@ -48,6 +57,6 @@
 			android:layout_margin="16dp"
 			app:layout_anchor="@id/fab_add"
 			app:layout_anchorGravity="bottom"
-			app:srcCompat="@drawable/baseline_add_white_18"/>
+			app:srcCompat="@drawable/ic_compare_white_24dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
