--- a/app/src/main/res/layout/comparison_overlap.xml
+++ b/app/src/main/res/layout/comparison_overlap.xml
@@ -5,7 +5,8 @@
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:context=".ComparisonOverlapActivity">
+		tools:context=".ComparisonOverlapActivity"
+		android:background="@color/backgroundDark">
 
 	<RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent"
 	              android:orientation="vertical">
