--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorAccent">@color/colorAccent</item>
 		<item name="android:windowBackground">@color/background</item>
+
+		<item name="android:activatedBackgroundIndicator">@drawable/item_activated</item>
 	</style>
 	<style name="AppTheme.NoActionBar">
 		<item name="windowActionBar">false</item>
