--- a/app/src/main/res/layout/activity_comparison_side_by_side.xml
+++ b/app/src/main/res/layout/activity_comparison_side_by_side.xml
@@ -10,19 +10,21 @@
 
     <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent"
                   android:orientation="vertical">
-        <ImageView android:id="@+id/image1"
-                   android:layout_height="0dp"
-                   android:layout_width="match_parent"
-                   android:layout_weight="1"
-                   android:src="@drawable/dsc_2549"></ImageView>
+        <com.ortiz.touchview.TouchImageView
+                android:id="@+id/image1"
+                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/dsc_2549"></com.ortiz.touchview.TouchImageView>
         <android.support.v4.widget.Space
                 android:layout_height="1dp"
                 android:layout_width="match_parent"
                 android:backgroundTint="@color/colorAccent"/>
-        <ImageView android:id="@+id/image2"
-                   android:layout_height="0dp"
-                   android:layout_width="wrap_content"
-                   android:layout_weight="1"
-                   android:src="@drawable/dsc_2550"></ImageView>
+        <com.ortiz.touchview.TouchImageView
+                android:id="@+id/image2"
+                android:layout_height="0dp"
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/dsc_2550"></com.ortiz.touchview.TouchImageView>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
