--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,12 +9,19 @@
 		<item name="android:windowBackground">@color/background</item>
 
 		<item name="android:activatedBackgroundIndicator">@drawable/item_activated</item>
+		<item name="alertDialogTheme">@style/AlertDialog</item>
 	</style>
+
+
 	<style name="AppTheme.NoActionBar">
 		<item name="windowActionBar">false</item>
 		<item name="windowNoTitle">true</item>
 	</style>
+
 	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+	<style name="AlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+		<item name="colorAccent">@color/colorPrimary</item>
+	</style>
 </resources>
