--- a/app/src/main/res/layout/activity_comparison_side_by_side.xml
+++ b/app/src/main/res/layout/activity_comparison_side_by_side.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ComparisonSideBySide"
-        android:background="@color/backgroundDark">
+        android:background="@color/backgroundDark"
+        android:orientation="vertical">
 
-    <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent"
-                  android:orientation="vertical">
         <com.ortiz.touchview.TouchImageView
                 android:id="@+id/image1"
                 android:layout_height="0dp"
@@ -26,5 +25,4 @@
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/dsc_2550"></com.ortiz.touchview.TouchImageView>
-    </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
